--- a/README.textile
+++ b/README.textile
@@ -2,8 +2,10 @@ h1. Kookaburra - a Ruby IRCD
 
 Kookaburra is an simple open source IRCD written in Ruby.
 
-It's a fork of "ruby-ircd":http://code.google.com/p/ruby-ircd/ with the following
-new features:
+It's a fork of "ruby-ircd":http://code.google.com/p/ruby-ircd/ with 
+some new work done (note: I'm moving towards rewriting everything).
+
+h2. Features
 
 # Better layout - proper module hierarchy
 # DRB interface
@@ -13,9 +15,15 @@ new features:
 # settings via configatron
 # Uses eventmachine for the networking
 
+h2. Usage
+
 To use, try:
 
   sudo gem install eventmachine extlib configatron
   ./script/server
+
+h2. Todo
+
+# Tests tests tests!
 
 Kudos!
